--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -22,21 +22,30 @@ Vagrant.configure("2") do |config|
     "vagrant-vbguest",
     "vagrant-hostmanager",
   ]
-  config.vm.box = "centos/7"
+  config.vm.box = "centos/8"
   config.vm.box_check_update = true
   # disable the default vagrant mount. We configure custom mounts on the VM separately.
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
-  if Vagrant.has_plugin?("vagrant-proxyconf")
-    config.yum_proxy.http = "{{ cookiecutter.vagrant_yum_proxy }}"
-    config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
-    config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
-  end
+  config.yum_proxy.http = "{{ cookiecutter.vagrant_yum_proxy }}"
+  config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
+  config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
 
   config.vbguest.auto_update = true
   config.hostmanager.enabled = true
   config.hostmanager.manage_host = true
   config.hostmanager.manage_guest = true
+
+  $dnf_proxy_script = <<-SCRIPT
+    # the vagrant-proxyconf plugin doesn't support dnf yet, so we append
+    # a proxy entry into the dnf.conf file here if applicable.
+    VAGRANT_YUM_PROXY="{{ cookiecutter.vagrant_yum_proxy }}"
+    if [ ! -z "$VAGRANT_YUM_PROXY" ]; then
+      sed -n -i -e '/^proxy=/!p' -e "\\$aproxy=$VAGRANT_YUM_PROXY" /etc/dnf/dnf.conf
+    fi
+  SCRIPT
+
+  config.vm.provision "shell", inline: $dnf_proxy_script, run: "always", privileged: true
 
   config.vm.define "dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.frontend_app_dev_hostname }}"
@@ -62,11 +71,11 @@ Vagrant.configure("2") do |config|
       # an initial 'vagrant up' without '|| true' since this script is executed
       # *before* the first ansible provisioning is run (which adds this mount
       # configuration into /etc/fstab and creates the systemd service).
-      sudo mount /opt/{{ cookiecutter.project_slug }}_backend/current/venv &> /dev/null || true
-      sudo systemctl restart {{ cookiecutter.project_slug }} &> /dev/null || true
+      mount /opt/{{ cookiecutter.project_slug }}_backend/current/venv &> /dev/null || true
+      systemctl restart {{ cookiecutter.project_slug }} &> /dev/null || true
     SCRIPT
 
-    machine.vm.provision "shell", inline: $dev_vm_post_up_script, run: "always"
+    machine.vm.provision "shell", inline: $dev_vm_post_up_script, run: "always", privileged: true
 
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
@@ -122,8 +131,8 @@ Vagrant.configure("2") do |config|
     $controller_vm_setup_script = <<-SCRIPT
       hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
       # install ansible requirements
-      yum install -y epel-release
-      yum install -y python36 python36-pip python36-devel sshpass openssl-devel
+      dnf install -y epel-release
+      dnf install -y python3 python3-pip sshpass openssl-devel
       pip3 install -r /vagrant/provisioning/requirements.txt
     SCRIPT
 
