--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -1,7 +1,7 @@
 ---
 {% raw %}
 - name: install packages used with selenium and X11 forwarding
-  yum:
+  dnf:
     name:
       - firefox
       - xorg-x11-xauth
