--- a/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/setup-RedHat.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/setup-RedHat.yml
@@ -1,7 +1,7 @@
 ---
 {% raw %}
 - name: install postgresql repo rpm
-  yum:
+  dnf:
     name: "https://download.postgresql.org/pub/repos/yum/reporpms/EL-{{ ansible_distribution_major_version }}-x86_64/pgdg-redhat-repo-latest.noarch.rpm"
     state: present
 {% endraw %}
