--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/main.yml
@@ -7,7 +7,7 @@
       - ssl_provider in ['selfsigned', 'copy', 'certbot']
 
 - name: install packages required for interacting with OpenSSL
-  yum:
+  dnf:
     name: python2-cryptography
     state: present
 
