--- a/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/vars/RedHat-8.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/vars/RedHat-8.yml
@@ -1,5 +1,5 @@
 ---
-
+{% raw %}
 # Placeholder vars file for the geerlingguy.postgresql role, which runs
 # include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
 # but hasn't been updated yet with a vars file for CentOS 8.
@@ -11,3 +11,4 @@
 # RedHat-8.yml vars file, any var defined in this file would then have a lower
 # precedence than the file at galaxy_roles/geerlingguy.postgresql/vars/RedHat-8.yml
 # which would cause unexpected behaviour after updating galaxy dependencies.
+{% endraw %}
