Enable the PowerTools repo when installing selenium dependencies for CentOS 8 compatibility.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -1,5 +1,10 @@
 ---
 {% raw %}
+
+- name: enable the PowerTools repo
+  command: dnf config-manager --enable PowerTools
+  warn: false
+
 - name: install packages used with selenium and X11 forwarding
   dnf:
     name:
