Enable the PowerTools repo when installing selenium packages for CentOS 8.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -2,8 +2,9 @@
 {% raw %}
 
 - name: enable the PowerTools repo
-  command: dnf config-manager --enable PowerTools
-  warn: false
+  command:
+    cmd: dnf config-manager --enable PowerTools
+    warn: false
 
 - name: install packages used with selenium and X11 forwarding
   dnf:
