--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -19,6 +19,15 @@
 
 - import_tasks: virtualenv.yml
 
+# Workaround for https://github.com/ansible/ansible/issues/56243
+- name: ensure files already exists at template destinations to work around 'invalid selinux context' issue
+  file:
+    path: "{{ backend_app_deploy_helper.new_release_path }}/{{ item }}"
+    state: touch
+  with_items:
+    - "settings.env"
+    - "gunicorn.cfg"
+
 - name: template settings into the new release path
   template:
     src: settings.env.j2
