--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -3,7 +3,8 @@
 backend_app_root: "/opt/{{ cookiecutter.project_slug }}_backend"
 backend_app_user: "{{ cookiecutter.project_slug }}"
 backend_app_group: "{{ cookiecutter.project_slug }}"
-{% raw %}backend_app_systemd_pid_file: "/run/{{ backend_app_systemd_runtime_dir }}/gunicorn.pid"{% endraw %}
+backend_app_systemd_runtime_dir: "{{ cookiecutter.project_slug }}"
+{% raw %}backend_app_systemd_pid_file: "/var/run/{{ backend_app_systemd_runtime_dir }}/gunicorn.pid"{% endraw %}
 backend_app_systemd_unit_name: "{{ cookiecutter.project_slug }}"
 backend_app_wsgi: "{{ cookiecutter.project_slug }}.wsgi"
 backend_app_geckodriver_version: "0.24.0"
