Set stdout callback to yaml in the standard ansible config.

--- a/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
@@ -2,7 +2,7 @@
 host_key_checking = yes
 roles_path = galaxy_roles:roles
 callback_whitelist = timer, profile_roles
-stdout_callback = debug
+stdout_callback = yaml
 force_color = yes
 
 [ssh_connection]
