--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/vars/main.yml
@@ -7,5 +7,5 @@ backend_app_systemd_runtime_dir: "{{ cookiecutter.project_slug }}"
 backend_app_vagrant_venv_bind_mount: "/opt/{{ cookiecutter.project_slug }}_vagrant_venv"
 {% raw %}backend_app_systemd_pid_file: "/var/run/{{ backend_app_systemd_runtime_dir }}/gunicorn.pid"{% endraw %}
 backend_app_systemd_unit_name: "{{ cookiecutter.project_slug }}"
-backend_app_wsgi: "{{ cookiecutter.project_slug }}.wsgi"
+backend_app_asgi: "{{ cookiecutter.project_slug }}.asgi:application"
 backend_app_geckodriver_version: "0.24.0"
