--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -14,7 +14,7 @@ nginx_vhosts:
 
   # catch-all configuration to validate the 'Host' HTTP header. A request which does
   # not match the specified 'server_name' will be returned a 404 response.
-  - listen: "443 ssl"
+  - listen: "443 ssl http2"
     server_name: "_"
     return: "404"
     filename: "01_frontend_ssl_catchall.conf"
@@ -22,7 +22,7 @@ nginx_vhosts:
       ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
       ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
 
-  - listen: "443 ssl"
+  - listen: "443 ssl http2"
     server_name: "{{ frontend_server_name }}"
     filename: "02_frontend_app.conf"
     root: "{{ frontend_app_root }}/current/"
