--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -115,14 +115,14 @@ Vagrant.configure("2") do |config|
     end
 
     $controller_vm_setup_script = <<-SCRIPT
-      hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
+      sudo hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
       # install ansible requirements
-      dnf install -y epel-release
-      dnf install -y python3 python3-pip sshpass openssl-devel
-      pip3 install -r /vagrant/provisioning/requirements.txt
+      sudo dnf install -y epel-release
+      sudo dnf install -y python3 python3-pip sshpass openssl-devel
+      pip3 install -r /vagrant/provisioning/requirements.txt --user
     SCRIPT
 
-    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: true
+    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: false
 
     # See https://www.vagrantup.com/docs/provisioning/ansible_local.html and
     # https://www.vagrantup.com/docs/provisioning/ansible_common.html
