--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -13,6 +13,7 @@
     virtualenv: "{{ backend_app_deploy_helper.new_release_path }}/venv"
     virtualenv_command: /usr/bin/python3.6 -m venv
     name:
+      - pip==19.3.1
       - pip-tools==4.3.0
 
 - name: install requirements using pip-sync
