Add note in locust readme about running with debug. Add explicit cpu configuration for the 'dev' Vagrant VM.

--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -66,6 +66,7 @@ Vagrant.configure("2") do |config|
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
       virtualbox.memory = 1024
+      virtualbox.cpus = 1
     end
   end
 
