--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -2,6 +2,7 @@ black>=19.3b0
 coverage>=4.5.4
 Django>=3.0.0
 django-environ>=0.4.5
+django-extensions>=2.2.5
 djangorestframework>=3.11.0
 flake8>=3.7.8
 gunicorn>=19.9.0
