Add task to update dnf cache. Replace 'yum' usage with 'dnf' in ansible.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -2,7 +2,7 @@
 {% raw %}
 - name: install additional required python packages
   become: true
-  yum:
+  dnf:
     name: python36-devel
     state: present
 
