Move some coverage config into the .coveragerc file.

--- a/{{ cookiecutter.project_slug }}/backend_app/Makefile
+++ b/{{ cookiecutter.project_slug }}/backend_app/Makefile
@@ -1,23 +1,23 @@
 .ONESHELL:
 .PHONY: test format lint safety_check
-
-ACTIVATE_VENV=. venv/bin/activate
+MAKEFILE_DIR := $(shell dirname $(abspath $(lastword $(MAKEFILE_LIST))))
+ACTIVATE_VENV = . venv/bin/activate
 
 test:
-	$(ACTIVATE_VENV)
-	coverage run --source='.' manage.py test
+	@cd $(MAKEFILE_DIR) && $(ACTIVATE_VENV)
+	coverage run --rcfile=".coveragerc" manage.py test
 	coverage html
-	@echo Coverage html report written to coverage_html_report/index.html
+	echo Coverage html report written to coverage_html_report/index.html
 	coverage erase
 
 format:
-	$(ACTIVATE_VENV)
+	cd $(MAKEFILE_DIR) && $(ACTIVATE_VENV)
 	black --config pyproject.toml .
 
 lint:
-	$(ACTIVATE_VENV)
+	cd $(MAKEFILE_DIR) && $(ACTIVATE_VENV)
 	flake8 --config .flake8 .
 
 safety_check:
-	$(ACTIVATE_VENV)
+	cd $(MAKEFILE_DIR) && $(ACTIVATE_VENV)
 	safety check
