--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
 __pycache__/
 *.py[cod]
-/.idea/
+/.idea/*
+!/.idea/runConfigurations/
 /.vagrant/
 /provisioning/galaxy_roles/
 /backend_app/settings.env
