--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 /.idea/*
 !/.idea/runConfigurations/
+!/.idea/modules.xml
+!/.idea/vagrant.xml
+!/.idea/{{ cookiecutter.project_slug }}.iml
 /.vagrant/
 /provisioning/galaxy_roles/
 /backend_app/settings.env
