--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/database/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/database/vars.yml
@@ -5,3 +5,6 @@ postgresql_hba_entries:
   - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
   - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
   - { type: host, database: all, user: all, address: '172.17.177.21/32', auth_method: md5 }
+  # Ensure the dev postgres server is accessible from any address (to allow access
+  # from tools such as PyCharm of pgAdmin). Don't set this in a production environment!
+  - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
