--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -59,8 +59,7 @@ Vagrant.configure("2") do |config|
     machine.vm.synced_folder(
       "./backend_app",
       "/opt/{{ cookiecutter.project_slug }}_backend/current",
-      type: "virtualbox",
-      mount_options: ["uid=1234", "gid=1234"]
+      type: "virtualbox"
     )
 
     machine.vm.provider "virtualbox" do |virtualbox|
