--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -1,8 +1,8 @@
 ---
 
+backend_app_user: "vagrant"
+backend_app_group: "vagrant"
 backend_app_vagrant_mount: true
-backend_app_gid: 1234
-backend_app_uid: 1234
 backend_app_debug: true
 backend_app_database_host: "172.17.177.22"
 backend_app_secret_key: "$DJANGO SECRET KEY$"
