--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/backend/vars.yml
@@ -1,5 +1,7 @@
 #---
 #
+#backend_app_user: "{{ cookiecutter.project_slug }}"
+#backend_app_group: "{{ cookiecutter.project_slug }}"
 #backend_app_vagrant_mount: false
 #backend_app_debug: false
 #backend_app_database_host: "<your-production-database-host>"
