--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 /.idea/*
+!/.idea/runConfigurations/
 !/.idea/modules.xml
 !/.idea/vagrant.xml
 !/.idea/{{ cookiecutter.project_slug }}.iml
