Add handler to restart nginx on ssl certificate change.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/copy.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/copy.yml
@@ -13,6 +13,7 @@
     owner: root
     group: root
     mode: "u=rw,o=,o="
+  notify: "updated ssl"
 
 - name: copy certificate
   copy:
@@ -21,4 +22,5 @@
     owner: root
     group: root
     mode: "u=rw,o=r,o=r"
+  notify: "updated ssl"
 {% endraw %}
