--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/selfsigned.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/selfsigned.yml
@@ -11,6 +11,7 @@
   openssl_privatekey:
     path: "{{ ssl_private_key_dest }}"
     backup: true
+  notify: "updated ssl"
 
 - name: generate an OpenSSL certificate signing request
   openssl_csr:
@@ -32,5 +33,5 @@
     csr_path: "{{ ssl_csr_path }}"
     provider: selfsigned
     selfsigned_not_after: "+365d"
-
+  notify: "updated ssl"
 {% endraw %}
