Change 'update dnf cache' task to a handler.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
@@ -7,10 +7,9 @@
 - name: install epel-release
   dnf:
     name: epel-release
+  notify: "update dnf cache"
 
-- name: update dnf cache
-  dnf:
-    update_cache: yes
+- meta: flush_handlers
 
 - import_tasks: login_info.yml
 
