--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/run_deploy.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/run_deploy.yml
@@ -31,7 +31,8 @@
     shared_path: ""
   register: backend_app_deploy_helper_output
 
-- set_fact:
+- name: set backend_app_deploy_helper fact
+  set_fact:
     backend_app_deploy_helper: "{{ backend_app_deploy_helper_output['ansible_facts']['deploy_helper'] }}"
 
 - name: synchronize backend_app to the new release folder
