--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
@@ -7,6 +7,7 @@
 - name: install epel-release
   dnf:
     name: epel-release
+    state: present
   notify: "update dnf cache"
 
 - meta: flush_handlers
