--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/certbot.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/tasks/certbot.yml
@@ -1,6 +1,7 @@
 ---
 {% raw %}
-- assert:
+- name: assert required variables are defined
+  assert:
     that:
       ssl_certbot_email is defined
 
