--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -45,7 +45,7 @@ Vagrant.configure("2") do |config|
     fi
   SCRIPT
 
-  config.vm.provision "shell", inline: $dnf_proxy_script, privileged: true
+  config.vm.provision "shell", inline: $dnf_proxy_script, privileged: true, name: "dnf proxy config"
 
   config.vm.define "dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.frontend_app_dev_hostname }}"
@@ -115,14 +115,16 @@ Vagrant.configure("2") do |config|
     end
 
     $controller_vm_setup_script = <<-SCRIPT
-      sudo hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
+      sudo hostnamectl set-hostname controller.my-project.vagrant
       # install ansible requirements
-      sudo dnf install -y epel-release
-      sudo dnf install -y python3 python3-pip sshpass openssl-devel
+      for package in 'epel-release' 'python36' 'python3-pip' 'sshpass' 'openssl-devel';
+        do
+          rpm -q $package &> /dev/null || sudo dnf install -y $package
+        done
       pip3 install -r /vagrant/provisioning/requirements.txt --user
     SCRIPT
 
-    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: false
+    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: false, name: "ansible setup"
 
     # See https://www.vagrantup.com/docs/provisioning/ansible_local.html and
     # https://www.vagrantup.com/docs/provisioning/ansible_common.html
