Add backend app cors configuration

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/backend/vars.yml
@@ -1,3 +1,4 @@
+{% raw %}
 #---
 #
 #backend_app_user: "{{ cookiecutter.project_slug }}"
@@ -10,4 +11,8 @@
 ## >>> from django.core.management import utils
 ## >>> utils.get_random_secret_key()
 #backend_app_secret_key: "<your-production-django-secret-key>"
-#
+#backend_app_cors_origin_whitelist:
+#  - "https://{{ frontend_server_name }}"
+#backend_app_allowed_hosts:
+#  - "{{ backend_server_name }}"
+{% endraw %}
