--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -1,6 +1,7 @@
 black>=19.3b0
 coverage>=5.0.1
 Django>=3.0.2
+django-cors-headers>=3.2.0
 django-environ>=0.4.5
 django-extensions>=2.2.5
 djangorestframework>=3.11.0
