--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/backend/vars.yml
@@ -1,8 +1,18 @@
 ---
-
+{% raw %}
 backend_app_user: "vagrant"
 backend_app_group: "vagrant"
 backend_app_vagrant_mount: true
 backend_app_debug: true
 backend_app_database_host: "172.17.177.22"
 backend_app_secret_key: "$DJANGO SECRET KEY$"
+backend_app_cors_origin_whitelist:
+  - "https://{{ frontend_server_name }}"
+  - "http://localhost:3000"
+  - {% endraw %}"http://{{ cookiecutter.controller_hostname }}:3000"
+{% raw %}
+backend_app_allowed_hosts:
+  - "localhost"
+  - "127.0.0.1"
+  - "{{ backend_server_name }}"
+{% endraw %}
