Update vagrantfile to use ansible tags from environment variables. Update frontend app documentation demonstrating use of ansible tags.

--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -139,6 +139,7 @@ Vagrant.configure("2") do |config|
       ansible.verbose = false
       ansible.limit = "all,localhost"
       ansible.inventory_path = "environments/dev/inventory"
+      ansible.tags = ENV["VAGRANT_ANSIBLE_TAGS"] || "all"
     end
     # Shut down the controller VM once it has finished provisioning the other VMs.
     # machine.vm.provision "shell", inline: "shutdown -h now"
